lab requiring honeynet VM

--- a/modules/generators/structured_content/hackerbot_config/ids_rules/templates/write_snort_rules.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/ids_rules/templates/write_snort_rules.md.erb
@@ -144,4 +144,6 @@ sudo tail /var/log/snort/alert
 
 ==LabBook Question: Browse the existing rules in `/etc/snort/rules` and describe how one of the existing rules works.==
 
-Tip: **Don't forget to reload Snort each time you change your rules.**
+Tips: 
+* **Don't forget to reload Snort each time you change your rules.**
+* Use unique sid values for each rule.
