--- a/modules/generators/structured_content/hackerbot_config/ids_exfiltration/templates/dlp.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/ids_exfiltration/templates/dlp.md.erb
@@ -14,12 +14,18 @@ Hint: you can include your sensitive data directly in a Snort rule. This is very
 
 It is fine to monitor all ports, so long as your rule(s) detect transfer of the file.
 
-#### Hash-based exfiltration detection
+#### Regular expression-based exfiltration detection
 
-Assuming the data you are protecting is sensitive, you likely don't want your Snort rules to contain direct copies of all your most sensitive data. For this reason, Snort rules can contain hashes to match against.
+Assuming the data you are protecting is sensitive, you likely don't want your Snort rules to contain direct copies of all your most sensitive data. For this reason, Snort rules can contain regular expressions to match against.
 
-It is possible to write Snort rules that detect the transfer of the contents of your files, based on hashes, so that the Snort rule does not contain any plain text of your document.
+It is possible to write Snort rules that detect the transfer of the contents of your files, based on pattern matching, so that the Snort rule does not contain the sensitive parts of your document.
 
-Hint: consider using the protected\_content keyword in your rule.
+Hint: consider using the pcre keyword in your rule.
+
+> Side note: *Hash-based exfiltration detection*: **you don't need to use this for this lab.**
+
+> Assuming the data you are protecting is sensitive, you likely don't want your Snort rules to contain direct copies of all your most sensitive data. For this reason, Snort rules can contain hashes to match against.
+
+> Using newer versions of Snort it is possible to write Snort rules that detect the transfer of the contents of your files, based on hashes (using the protected\_content keyword), so that the Snort rule does not contain any plain text of your document.
 
 ---
