--- a/modules/generators/structured_content/hackerbot_config/ids_exfiltration/templates/intro.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/ids_exfiltration/templates/intro.md.erb
@@ -9,7 +9,7 @@ This week's lab is entirely problem-based.
 
 - hackerbot_server (leave it running, you don't log into this)
 - ids_server (IP address: <%= $ids_server_ip %>)
-- web_server (IP address: <%= $web_server_ip %>, leave it running, you don't log into this)
+- web_server (IP address: <%= $web_server_ip %>, leave it running, you don't log into this through the gui console, you may ssh to it later in the lab)
 - desktop
 
 All of these VMs need to be running to complete the lab.
