--- a/modules/generators/structured_content/hackerbot_config/ids/templates/lab.xml.erb
+++ b/modules/generators/structured_content/hackerbot_config/ids/templates/lab.xml.erb
@@ -27,6 +27,7 @@
   end
 
   $main_user = $first_account['username'].to_s
+  $main_password = $first_account['password'].to_s
   $second_user = $second_account['username'].to_s
   $example_file = "/home/#{$second_user}/#{$files.sample}"
   $example_dir = "/home/#{$second_user}/personal_secrets/"
