--- a/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_2/templates/intro.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_2/templates/intro.md.erb
@@ -56,3 +56,54 @@ Remember you can learn more about the commands by running:
 ```bash
 man *command*
 ```
+
+## Getting Snort up and running
+
+**On the ids_server VM:**
+
+==Change Snort's output== to something more readable:
+
+```bash
+sudo vi /etc/snort/snort.conf
+```
+> (Remember: editing using vi involves pressing "i" to insert/edit text, then *Esc*,
+
+> ":wq" to write changes and quit)
+
+==Add the following lines:==
+`output alert_fast`
+
+`include $RULE_PATH/my.rules`
+
+==Create a new rules file:==
+
+```bash
+sudo touch /etc/snort/rules/my.rules
+```
+
+Let us edit the rules file without sudo:
+
+```bash
+sudo chown <%= $main_user %> /etc/snort/rules/my.rules
+```
+
+==Change Snort's interface== to the interface with IP address <%= $ids_server_ip %> (likely eth1), and set the local network to your IP address range (or "any"):
+
+```bash
+sudo vi /etc/snort/snort.debian.conf
+```
+> If you are not sure which interface to use, list the interfaces with `ifconfig` or `ip a s`
+> Set the interface and HOME network range, and exit vi (Esc, ":wq").
+
+==Restart Snort:==
+
+```bash
+sudo service snort stop
+sudo service snort start
+```
+> Using "reload" or "restart" may not update the interface.
+
+Snort should now be running, monitoring network traffic for activity.
+
+It can be helpful to monitor network traffic while writing IDS rules. You can start Wireshark with `kdesudo wireshark &`
+
