--- a/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_2/templates/intro.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_2/templates/intro.md.erb
@@ -10,7 +10,7 @@ In the unlikely event you experience technical issues with our infrastructure du
 
 * If a VM looses its IP addresses (particularly the IDS server), simply run `sudo ifconfig eth1 *IP_ADDRESS*`, where `*IP_ADDRESS*` is the expected IP address (listed in the section below).
 
-* If you experience any technical issues, which you believe to be outside your control, let us know before you leave the room. However, keep in mind we won't point you in the right direction of the answers during the test.
+* If you experience any technical issues, which you believe to be outside your control, let us know before you leave the room. However, keep in mind we won't give hints for the actual test challenges.
 
 ## Getting started
 ### VMs in this lab
