--- a/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_2/templates/live_analysis_1.xml.erb
+++ b/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_2/templates/live_analysis_1.xml.erb
@@ -1,6 +1,6 @@
 	<attack>
 <% $rand_port_live = rand(65535) %>
-		<pre_shell>sshpass -p <%= $root_password %> ssh -oStrictHostKeyChecking=no root@<%= $web_server_ip %> 'setsid nc -l -p <%= $rand_port_live %> &amp;' &amp; sleep 3; killall -9 ssh; echo 'OK'</pre_shell>
+		<pre_shell>sshpass -p <%= $root_password %> ssh -oStrictHostKeyChecking=no root@<%= $web_server_ip %> 'setsid nc -l -p <%= $rand_port_live %> &amp; sleep 1' &amp; sleep 3; killall -9 ssh; echo 'OK'</pre_shell>
 
 		<get_shell>false</get_shell>
 		<post_command></post_command>
@@ -9,6 +9,11 @@
 
 		<condition>
 			<output_matches>OK</output_matches>
+			<message>Ok, answer this.</message>
+			<trigger_quiz />
+		</condition>
+		<condition>
+			<output_matches>OK..</output_matches>
 			<message>Ok, answer this.</message>
 			<trigger_quiz />
 		</condition>
