--- a/modules/services/unix/http/parameterised_website/templates/subtemplates/header.html.erb
+++ b/modules/services/unix/http/parameterised_website/templates/subtemplates/header.html.erb
@@ -8,6 +8,7 @@
 
   <!-- Default stylesheet -->
   <link rel="stylesheet" type="text/css" href="css/default.css"/>
+  <link rel="stylesheet" type="text/css" href="css/randomly_selected.css"/>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 
 </head>
