--- a/modules/services/unix/http/parameterised_website/templates/subtemplates/navbar.html.erb
+++ b/modules/services/unix/http/parameterised_website/templates/subtemplates/navbar.html.erb
@@ -1,16 +1,16 @@
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
     <div class="container">
-      <div id="navbar" class="collapse navbar-collapse">
+      <div id="navbarResponsive" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <% if @organisation and @organisation != '' -%>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
           <% end -%>
           <% if @security_audit -%>
-          <li><a href="security_audit_remit.html">Security Audit Remit</a></li>
+          <li class="nav-item"><a class="nav-link" href="security_audit_remit.html">Security Audit Remit</a></li>
           <% end -%>
           <% if @acceptable_use_policy -%>
-          <li><a href="acceptable_use_policy.html">Acceptable Use Policy</a></li>
+          <li class="nav-item"><a class="nav-link" href="acceptable_use_policy.html">Acceptable Use Policy</a></li>
           <% end -%>
         </ul>
       </div><!--/.nav-collapse -->
