--- a/modules/services/unix/http/parameterised_website/templates/subtemplates/header.html.erb
+++ b/modules/services/unix/http/parameterised_website/templates/subtemplates/header.html.erb
@@ -7,7 +7,11 @@
   <title><%= $page_title %></title>
 
   <!-- Default stylesheet -->
-  <link rel="stylesheet" type="text/css" href="themes/cerulean.min.css" />
+
+  <!-- TODO: include this as a random style -->
+  <link rel="stylesheet" type="text/css" href="themes/<%= @theme %>" />
+  <!-- /TODO -->
+
   <!--<link rel="stylesheet" type="text/css" href="css/randomly_selected.css"/>-->
   <link rel="stylesheet" type="text/css" href="css/default.css"/>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
