WiP: Random themes

--- a/modules/services/unix/http/parameterised_website/templates/subtemplates/header.html.erb
+++ b/modules/services/unix/http/parameterised_website/templates/subtemplates/header.html.erb
@@ -7,13 +7,8 @@
   <title><%= $page_title %></title>
 
   <!-- Default stylesheet -->
-
-  <!-- TODO: include this as a random style -->
-  <link rel="stylesheet" type="text/css" href="themes/<%= @theme %>" />
-  <!-- /TODO -->
-
-  <!--<link rel="stylesheet" type="text/css" href="css/randomly_selected.css"/>-->
-  <link rel="stylesheet" type="text/css" href="css/default.css"/>
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/bootstrap.min.css" media="screen"/>
+  <link rel="stylesheet" href="css/<%= @theme %>" />
+  <link rel="stylesheet" href="css/default.css"/>
 
 </head>
