--- a/modules/services/unix/http/parameterised_website/templates/subtemplates/main_container.html.erb
+++ b/modules/services/unix/http/parameterised_website/templates/subtemplates/main_container.html.erb
@@ -1,4 +1,24 @@
-<div id="main_container" class="container">
+<div class="container">
+
+
+  <div class="page-header" id="banner">
+    <div class="row">
+      <div class="col-lg-8 col-md-7 col-sm-6">
+        <h1>Superhero</h1>
+        <p class="lead">The brave and the blue</p>
+      </div>
+      <div class="col-lg-4 col-md-5 col-sm-6">
+        <div class="sponsor">
+          <a href="https://www.shopify.com/?ref=bootswatch">
+            <img src="../_assets/img/shopify-300x250-light@2x.jpg">
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="bs-docs-section clearfix">
   <div class="row">
     <div class="main_page_content">
       <% # Intranet style -%>
@@ -37,6 +57,7 @@
         <% } -%>
       <% end -%>
     </div>
+  </div>
   </div>
 </div>
 <% if @white_text -%>
