--- a/modules/services/unix/http/parameterised_website/templates/subtemplates/navbar.html.erb
+++ b/modules/services/unix/http/parameterised_website/templates/subtemplates/navbar.html.erb
@@ -1,6 +1,7 @@
   <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
     <div class="container">
-      <div id="navbarResponsive" class="collapse navbar-collapse">
+      <div class="navbar-brand"><%= @business_name %></div>
+      <div class="collapse navbar-collapse" id="navbarResponsive" >
         <ul class="nav navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <% if @organisation and @organisation != '' -%>
