WiP: nicer themes, changed leeds beckett businesses to look better

--- a/modules/services/unix/http/parameterised_website/templates/default.css.erb
+++ b/modules/services/unix/http/parameterised_website/templates/default.css.erb
@@ -3,6 +3,17 @@ body {
   font-size: 2rem;
 }
 
+h1 {
+  font-size: 4rem;
+}
+
+.navbar-brand {
+  font-size: 2.25rem;
+}
+
+.lead {
+  font-size: 2.5rem;
+}
 
 <% if @white_text -%>
 #white_text {
