--- a/modules/services/unix/http/parameterised_website/templates/contact.html.erb
+++ b/modules/services/unix/http/parameterised_website/templates/contact.html.erb
@@ -11,29 +11,34 @@
           <hr class="star-light">
           <h3> <%= @business_motto %></h3>
         </div>
-
+      </div>
+      <div class="col-lg-12">
         <div id="business_address">
           <p><strong>Contact <%= @business_name %></strong></p>
           <p>Address: <%= @business_address %></p>
           <p>Telephone: <%= @office_telephone %></p>
           <p>Email: <%= @office_email %></p>
         </div>
-
+      </div>
+      <div class="col-lg-12">
         <div id="manager">
           <h4>Manager</h4>
           <p><%= @manager_profile['name'] %></p>
           <p><%= @manager_profile['phone_number'] %></p>
           <p><%= @manager_profile['email_address'] %></p>
         </div>
-
-          <h4>Employees</h4>
+      </div>
+      <div class="col-lg-12">
+        <h4>Employees</h4>
           <% @employees.each do |employee| -%>
+            <div class="col-lg-4"/>
               <p><strong><%= employee['name'] %></strong></p>
               <p><%= employee['phone_number'] %></p>
               <p><%= employee['email_address'] %></p>
               <p/>
-
+            </div>
           <% end %>
+          </div>
         </div>
       </div>
     </div>
