--- a/modules/services/unix/http/parameterised_website/templates/contact.html.erb
+++ b/modules/services/unix/http/parameterised_website/templates/contact.html.erb
@@ -12,30 +12,31 @@
           <h3> <%= @business_motto %></h3>
         </div>
       </div>
-      <div class="col-lg-12">
-        <div id="business_address">
-          <p><strong>Contact <%= @business_name %></strong></p>
+      <div class="col-lg-12" id="contact">
+        <div>
+          <h2>Contact <%= @business_name %></h2>
           <p>Address: <%= @business_address %></p>
           <p>Telephone: <%= @office_telephone %></p>
           <p>Email: <%= @office_email %></p>
         </div>
       </div>
       <div class="col-lg-12">
-        <div id="manager">
-          <h4>Manager</h4>
+        <div class="employee">
+          <h2>Manager</h2>
           <p><%= @manager_profile['name'] %></p>
           <p><%= @manager_profile['phone_number'] %></p>
           <p><%= @manager_profile['email_address'] %></p>
         </div>
       </div>
-      <div class="col-lg-12">
-        <h4>Employees</h4>
+      <div class="col-lg-12" id="employees">
+        <h2>Employees</h2>
           <% @employees.each do |employee| -%>
-            <div class="col-lg-4"/>
+            <div class="col-lg-4">
+            <div class="employee">
               <p><strong><%= employee['name'] %></strong></p>
               <p><%= employee['phone_number'] %></p>
               <p><%= employee['email_address'] %></p>
-              <p/>
+            </div>
             </div>
           <% end %>
           </div>
