--- a/modules/services/unix/http/parameterised_website/templates/default.css.erb
+++ b/modules/services/unix/http/parameterised_website/templates/default.css.erb
@@ -15,6 +15,17 @@ h1 {
   font-size: 2.5rem;
 }
 
+.employee {
+  font-size: 1.5rem;
+  padding-top: 20px;
+}
+
+#contact, #employees {
+  padding-top: 20px;
+}
+
+
+
 <% if @white_text -%>
 #white_text {
   color: white;
