--- a/modules/generators/structured_content/hackerbot_config/integrity_protection/templates/integrity_lab.xml.erb
+++ b/modules/generators/structured_content/hackerbot_config/integrity_protection/templates/integrity_lab.xml.erb
@@ -60,6 +60,8 @@
 	<get_shell>sshpass -p <%= $root_password %> ssh -oStrictHostKeyChecking=no root@{{chat_ip_address}} /bin/bash</get_shell>
 
 	<messages>
+    <show_attack_numbers />
+
 		<greeting>Your system is about to be hacked. I'll do what I can hold them off, but you are going to have to work with me to protect yourself. I'll cough up some flags if you work with me.</greeting>
 
 		<!--Must provide alternatives for each message-->
