--- a/modules/generators/structured_content/hackerbot_config/ids/templates/lab.xml.erb
+++ b/modules/generators/structured_content/hackerbot_config/ids/templates/lab.xml.erb
@@ -64,6 +64,8 @@
 	<get_shell>false</get_shell>
 
 	<messages>
+    <show_attack_numbers />
+
 		<greeting>Your web server is going to be attacked. I have inside information that will help you to monitor your network for the attacks. If you work with me I'll provide you with some flags.</greeting>
 
 		<!--Must provide alternatives for each message-->
